# livestream-chat

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  dotenv.txt  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: app.py  chat.py  containers.py  database.py  logger.py  models.py  routes.py  schemas.py  services.py  settings.py  twitch_bot.py  ws_manager.py  youtube_chat.py
migrations/: env.py
migrations/versions/: cfce2e1c056b_comments.py  fc15c152607f_youtube_token_table.py
static/: chat_websocket.py  highlight.py  styles.css  styles.css.map  styles.scss
templates/: base.html  chat.html  highlight.html
tests/: conftest.py  test_app.py  test_database.py  test_db.py  test_schemas.py  test_youtube_chat.py
