[tool.poetry]
name = "livestream-chat"
version = "0.1.0"
description = ""
authors = ["dunossauro <mendesxeduardo@gmail.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "^23.2.1"
jinja2 = "^3.1.3"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
sentry-sdk = "^1.41.0"
twitchio = "^2.8.2"
sqlalchemy = "^2.0.37"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
emoji = "^2.12.1"
psycopg = {extras = ["binary"], version = "^3.1.19"}
dependency-injector = "^4.45.0"
fastapi = {extras = ["standard"], version = "^0.115.6"}

[tool.poetry.group.dev.dependencies]
xenon = "^0.9.1"
taskipy = "^1.12.2"
ruff = "^0.3.2"
pytest-asyncio = "^0.23.5.post1"
respx = "^0.20.2"
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
mypy-extensions = "^1.0.0"
typos = "^1.22.9"
pytest-loguru = "^0.4.0"
pytest-mock = "^3.14.0"
testcontainers = "^4.7.0"

[tool.taskipy.tasks]
lint = 'ruff check app && typos app && typos tests'
format = 'ruff check app --fix; ruff format'
test = 'pytest --cov=app -vv'
post_test = 'coverage html'
mypy = 'mypy . --ignore-missing-imports --check-untyped-defs'

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.format]
indent-style = 'space'
quote-style = 'single'

[tool.ruff.lint.per-file-ignores]
"app.py" = ['ANN201', 'B008']
"schemas.py" = ['N805']
'tests/*' = ['S101', 'S105', 'ANN201', 'INP001', 'PLR2004']
'static/*' = ['B015', 'ANN201', 'ANN001', 'ARG001', 'INP001', 'ANN202', 'PLR2004']

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = '.'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
