[project]
name = "livestream-chat"
version = "0.1.0"
description = ""
authors = [{ name = "dunossauro", email = "mendesxeduardo@gmail.com" }]
requires-python = ">=3.12,<4"
dependencies = [
    "aiofiles>=23.2.1,<24",
    "jinja2>=3.1.3,<4",
    "httpx>=0.27.0,<0.28",
    "python-dotenv>=1.0.1,<2",
    "loguru>=0.7.2,<0.8",
    "sentry-sdk>=1.41.0,<2",
    "twitchio>=2.8.2,<3",
    "sqlalchemy>=2.0.37,<3",
    "pydantic-settings>=2.2.1,<3",
    "alembic>=1.13.1,<2",
    "emoji>=2.12.1,<3",
    "psycopg[binary]>=3.1.19,<4",
    "dependency-injector>=4.45.0,<5",
    "fastapi[standard]>=0.115.6,<0.116",
]

[dependency-groups]
dev = [
    "xenon>=0.9.1,<0.10",
    "taskipy>=1.12.2,<2",
    "ruff>=0.3.2,<0.4",
    "pytest-asyncio>=0.23.5.post1,<0.24",
    "respx>=0.20.2,<0.21",
    "pytest>=8.0.2,<9",
    "pytest-cov>=4.1.0,<5",
    "mypy-extensions>=1.0.0,<2",
    "typos>=1.22.9,<2",
    "pytest-loguru>=0.4.0,<0.5",
    "pytest-mock>=3.14.0,<4",
    "testcontainers>=4.7.0,<5",
]

[tool.poetry]
package-mode = false


[tool.taskipy.tasks]
lint = 'ruff check app && typos app && typos tests'
format = 'ruff check app --fix; ruff format'
test = 'pytest --cov=app -vv'
post_test = 'coverage html'
mypy = 'mypy . --ignore-missing-imports --check-untyped-defs'

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.format]
indent-style = 'space'
quote-style = 'single'

[tool.ruff.lint.per-file-ignores]
"app.py" = ['ANN201', 'B008']
"schemas.py" = ['N805']
'tests/*' = ['S101', 'S105', 'ANN201', 'INP001', 'PLR2004']
'static/*' = ['B015', 'ANN201', 'ANN001', 'ARG001', 'INP001', 'ANN202', 'PLR2004']

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = '.'


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
